tooling/nargo_cli/tests/snapshots/execution_success/global_var_regression_entry_points/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v518: Field, v519: Field):
    (no terminator instruction)
}
